[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy/SnailBoss.gd" type="Script" id=1]
[ext_resource path="res://BlenderModels/Enemy/SnailBoss/SnailBoss.glb" type="PackedScene" id=3]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.4, 0.6, 0.4 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.4, 0.3, 0.3 )

[sub_resource type="CylinderShape" id=6]
radius = 7.0

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 0.550694, 0.510114 )

[node name="Enemy" type="KinematicBody" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 2 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.34, 0, 0.7, 1 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.7, 0, 0, 0, -2.28089e-07, -1.4, 0, 3.7, -6.02808e-07, 0, -0.933899, 1.4 )
shape = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.634318, -1.89648 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Area" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0.9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
polygon = PoolVector2Array( 0, 0, 29, 20, 29, -20 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="HitZone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="HitZone"]
transform = Transform( 1, 0, 0, 0, 1.73143, 0, 0, 0, 1, 0, 0.344685, -4.71254 )
shape = SubResource( 7 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SnailBoss" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.7, 0, -6.11959e-08, 0, 0.7, 0, 6.11959e-08, 0, -0.7, 0, -1.5, 2 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="HitZone" to="." method="_on_HitZone_body_entered"]
[connection signal="body_exited" from="HitZone" to="." method="_on_HitZone_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
